--- a/res/layout/guide.xml
+++ b/res/layout/guide.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="Hello World, mirah-guide"
-    />
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
+              android:orientation="vertical"
+              android:gravity="top|center_horizontal"
+              android:padding="20dp">
+
+  <Button android:id="@+id/locate_btn"
+          android:text="Locate Me"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content" />
+  
 </LinearLayout>
 
