Wire up the list & adapter. Update the adapter when we get new JSON.

--- a/res/layout/guide.xml
+++ b/res/layout/guide.xml
@@ -27,6 +27,12 @@
               android:layout_height="wrap_content" />
     
   </LinearLayout>
+
+  <ListView android:id="@+id/list"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:gravity="left|center_vertical"
+            />
   
 </LinearLayout>
 
