--- a/res/layout/guide.xml
+++ b/res/layout/guide.xml
@@ -3,36 +3,20 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:orientation="vertical"
-              android:gravity="top|left"
-              android:padding="20dp">
-  
-  <LinearLayout android:orientation="horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center">
-
-    <Button android:id="@+id/locate_btn"
-            android:text="Locate Me"
-            android:layout_width="100dp"
+              android:gravity="top|left">
+    
+  <TextView android:text="Nearby Things"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp" />
-    
-    <TextView android:text="Location:"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_marginRight="3sp" />
-    <TextView android:id="@+id/current_location"
-              android:text="unknown"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content" />
-    
-  </LinearLayout>
+            android:layout_margin="10dp"
+            android:lines="1"
+            android:ellipsize="end"
+            android:textSize="28sp" />
 
   <ListView android:id="@+id/list"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:gravity="left|center_vertical"
-            />
+            android:gravity="left|center_vertical" />
   
 </LinearLayout>
 
