--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -13,6 +13,7 @@
   <TextView android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:lines="1"
+            android:ellipsize="end"
             android:textSize="14sp" />
 
 </LinearLayout>
